设置了应用程序的配置信息

--- a/zhyy/src/main/resources/application.properties
+++ b/zhyy/src/main/resources/application.properties
@@ -1,21 +1,16 @@
-spring.application.name=zhyy
-
-management.endpoints.jmx.exposure.include=*
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
-
-
-# spring cloud access&secret config
-# 可以访问如下地址查看: https://usercenter.console.aliyun.com/#/manage/ak
-alibaba.cloud.access-key=****
-alibaba.cloud.secret-key=****
-
-mybatis.mapper-locations=classpath:mapper/*Mapper.xml
-mybatis.type-aliases-package=com.newer.mongo.dao
-
-# 应用服务 WEB 访问端口
-server.port=8080
-# Actuator Web 访问端口
-management.server.port=8081
+#数据源配置
+spring.datasource.url=jdbc:mysql://47.94.234.109:3306/zhyy?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
 
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#设置日志打印
+logging.level.web=debug
+spring.mvc.log-request-details=true
+
+
+#jpa的设置
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
