--- a/zhyy/src/main/resources/application.properties
+++ b/zhyy/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.mvc.log-request-details=true
 #jpa的设置
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+
+#spring.security.user.name=test
+#spring.security.user.password=test
+#spring.security.user.roles=admin
